fix(component): Fix action bar spacing and text color
affects: ak-comment

--- a/packages/ak-comment/src/styles.less
+++ b/packages/ak-comment/src/styles.less
@@ -1,10 +1,6 @@
 @import '~akutil-shared-styles/src/colors.less';
 
 @grid: 8;
-@top-color: @ak-color-N500;
-@content-color: @ak-color-N800;
-@actions-color: @ak-color-N100;
-@actions-color-separator: @ak-color-N500;
 @actions-padding: @grid * 2;
 @vertical-padding: @grid * 3.5;
 
@@ -29,35 +25,38 @@
 }
 
 .top-container {
-  color: @top-color;
+  color: @ak-color-N500;
   display: flex;
-}
 
-.top-item + .top-item {
-  padding-left: unit(@grid, px);
+  .top-item + .top-item {
+    padding-left: unit(@grid, px);
+  }
 }
 
 .content-container {
-  color: @content-color;
+  color: @ak-color-N800;
 }
 
 .actions-container {
-  color: @actions-color;
   display: flex;
   line-height: 2; // 2 * 14px font-size = 28px line-height
-}
 
-.actions-item {
-  display: flex;
-}
+  .actions-item {
+    display: flex;
 
-.actions-item + .actions-item::before {
-  content: "\b7\a0"; // middot character
-  display: inline-block;
-  line-height: 1;
-  text-align: center;
-  vertical-align: middle;
-  width: unit(@actions-padding, px);
+    & > * {
+      color: @ak-color-N100;
+    }
+
+    & + .actions-item::before {
+      color: @ak-color-N500;
+      content: "\b7\a0"; // middot character
+      display: inline-block;
+      text-align: center;
+      vertical-align: middle;
+      width: unit(@actions-padding, px);
+    }
+  }
 }
 
 .nested-comments {
